# api/docs/swagger.json
@@ -1046,6 +1046,20 @@
                 }
             }
         },
+        "routes.OutputFileInfo": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "extension": {
+                    "type": "string"
+                },
+                "mimeType": {
+                    "type": "string"
+                }
+            }
+        },
         "routes.PackSpritesResponse": {
             "type": "object",
             "properties": {
@@ -1057,10 +1071,10 @@
                     }
                 },
                 "outputFiles": {
-                    "description": "Format name -\u003e file content",
+                    "description": "Format name -\u003e file info (content, extension, mime type)",
                     "type": "object",
                     "additionalProperties": {
-                        "type": "string"
+                        "$ref": "#/definitions/routes.OutputFileInfo"
                     }
                 },
                 "resizedSprites": {
